@@ -717,6 +717,7 @@ $wgAutoloadLocalClasses = array(
 	'ManualLogEntry' => 'includes/logging/LogEntry.php',
 	'MoveLogFormatter' => 'includes/logging/MoveLogFormatter.php',
 	'NewUsersLogFormatter' => 'includes/logging/NewUsersLogFormatter.php',
+	'PageLangLogFormatter' => 'includes/logging/PageLangLogFormatter.php',
 	'PatrolLog' => 'includes/logging/PatrolLog.php',
 	'PatrolLogFormatter' => 'includes/logging/PatrolLogFormatter.php',
 	'RCDatabaseLogEntry' => 'includes/logging/LogEntry.php',
@@ -1017,6 +1018,7 @@ $wgAutoloadLocalClasses = array(
 	'SpecialMyuploads' => 'includes/specials/SpecialMyRedirectPages.php',
 	'SpecialNewFiles' => 'includes/specials/SpecialNewimages.php',
 	'SpecialNewpages' => 'includes/specials/SpecialNewpages.php',
+	'SpecialPageLanguage' => 'includes/specials/SpecialPageLanguage.php',
 	'SpecialPasswordReset' => 'includes/specials/SpecialPasswordReset.php',
 	'SpecialPagesWithProp' => 'includes/specials/SpecialPagesWithProp.php',
 	'SpecialPermanentLink' => 'includes/specials/SpecialPermanentLink.php',
